// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should accept the style prop 1`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  font-size: 0.75rem;
  border: 1px solid #e6e6e6;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #e6e6e6;
}

.emotion-1 {
  color: red;
}

<table
  class="emotion-3"
>
  <tbody
    class="emotion-2"
  >
    <tr
      class="emotion-1"
    >
      <td
        class="emotion-0"
      >
        Test
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableRow should have the pointer class if onClick is specified 1`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  font-size: 0.75rem;
  border: 1px solid #e6e6e6;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #e6e6e6;
}

<table
  class="emotion-3"
>
  <tbody
    class="emotion-1"
  >
    <tr
      class="emotion-1"
    >
      <td
        class="emotion-0"
      >
        Test
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`TableRow should have the pointer class if onClick is specified 2`] = `
.emotion-3 {
  width: 100%;
  border-collapse: collapse;
  font-size: 0.75rem;
  border: 1px solid #e6e6e6;
}

.emotion-0 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #e6e6e6;
}

.emotion-1 {
  cursor: pointer;
}

<table
  class="emotion-3"
>
  <tbody
    class="emotion-2"
  >
    <tr
      class="emotion-1"
    >
      <td
        class="emotion-0"
      >
        Test
      </td>
    </tr>
  </tbody>
</table>
`;
